--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,7 +1,13 @@
 html,
 body {
+  margin: 0 auto;
   height: 100%;
+  max-width: 1920px;
+  background-color: #f0f0f0;
   scroll-behavior: smooth;
+  font-size: 24px;
+  color: $default;
+  @extend%manrope-600;
 }
 
 a {
@@ -9,13 +15,7 @@ a {
 }
 
 .container {
-  max-width: 1200px;
+  max-width: 1290px;
   margin: 0 auto;
   padding: 0 10px;
-}
-
-body {
-  @extend%inter-400;
-  font-size: 24px;
-  color: $default;
 }
