--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -19,3 +19,23 @@
 }
 
 $default: #1f1f1f;
+$acsent: #a90505;
+$bg: #f0f0f0;
+
+%btn {
+  @extend%ubuntu-700;
+  padding: 27px 105px;
+  background-color: $acsent;
+  font-size: 20px;
+  line-height: 24px;
+  color: $bg;
+  border: none;
+  border-radius: 70px;
+  cursor: pointer;
+  transition: all 0.5s;
+  cursor: pointer;
+  &:hover {
+    opacity: 80%;
+    transition: all 0.5s;
+  }
+}
