--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2,14 +2,14 @@
 @import 'fonts';
 @import 'reset';
 @import 'global';
-@import 'media';
+
 @import 'libs';
 
 .header {
   background-image: url('../images/bg-header.png');
+  background-size: 868px 1082px;
   background-repeat: no-repeat;
   background-position: right;
-  height: 1082px;
   &__title {
     display: inline-block;
     font-weight: 700;
@@ -33,6 +33,7 @@
     color: $default;
     max-width: 542px;
     margin-bottom: 63px;
+    margin-top: 12px;
   }
 }
 
@@ -45,8 +46,9 @@
 
 .header-info {
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: start;
+  gap: 82px;
   &__order {
     display: flex;
     gap: 45px;
@@ -72,9 +74,10 @@
     );
     box-shadow: 4px 4px 8px -2px rgba(0, 0, 0, 0.15);
     backdrop-filter: blur(20px);
-
     border-radius: 17px;
     padding: 19px;
+    max-width: 379px;
+    height: 142px;
   }
 }
 
@@ -95,6 +98,9 @@
     align-items: center;
     justify-content: center;
   }
+  &__item-img {
+    z-index: 9999;
+  }
   &__item-wrapper {
     background-color: #dddddd;
     opacity: 0.9;
@@ -103,12 +109,11 @@
     max-width: 298px;
     height: 118px;
     margin-top: -25px;
-    z-index: -1;
   }
   &__item-text {
     font-size: 20px;
     line-height: 120%;
-    padding: 23px 36px;
+    padding: 25px 35px;
   }
 }
 
@@ -170,8 +175,6 @@
 .author-info {
   &__top {
     max-width: 450px;
-    text-align: end;
-    margin-bottom: 59px;
   }
   &__top-title {
     @extend%ubuntu-700;
@@ -193,6 +196,7 @@
     font-size: 24px;
     line-height: 120%;
     max-width: 574px;
+    margin-left: 25px;
     &::marker {
       color: $acsent;
     }
@@ -218,6 +222,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
     font-size: 18px;
     line-height: 120%;
     margin-bottom: 40px;
@@ -229,7 +234,7 @@
     backdrop-filter: blur(20px);
     border-radius: 17px;
     padding: 22px 48px 22px 22px;
-    max-width: 332px;
+    flex-basis: 332px;
   }
   &__item-two {
     background: #f0f0f0;
@@ -238,7 +243,7 @@
     backdrop-filter: blur(20px);
     border-radius: 17px;
     padding: 22px 35px 22px 22px;
-    max-width: 569px;
+    flex-basis: 569px;
   }
   &__item-three {
     background: #f0f0f0;
@@ -247,7 +252,7 @@
     backdrop-filter: blur(20px);
     border-radius: 17px;
     padding: 22px;
-    max-width: 332px;
+    flex-basis: 332px;
   }
 }
 
@@ -295,7 +300,7 @@
     line-height: 120%;
     @extend%manrope-500;
     margin-bottom: 19px;
-    margin-left: 30px;
+    margin-left: 34px;
     span {
       @extend%manrope-700;
     }
@@ -332,6 +337,7 @@
     line-height: 120%;
     margin-bottom: 36px;
     margin-bottom: 98px;
+    text-transform: uppercase;
     span {
       color: $acsent;
     }
@@ -364,6 +370,7 @@
   background-color: rgba(0, 0, 0, 0.399);
   position: fixed;
   transition: all 0.5s ease-in-out;
+  z-index: 9999;
   &__form {
     max-width: 720px;
     height: 859px;
@@ -459,3 +466,5 @@
     color: $acsent;
   }
 }
+
+@import 'media';
