--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -42,6 +42,12 @@
   grid-template-columns: repeat(3, 300px);
   gap: 31px 30px;
   margin-bottom: 13px;
+  transition: all 0.5s;
+
+  &__img:hover {
+    transform: scale(1.1);
+    transition: all 0.5s;
+  }
 }
 
 .header-info {
