--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -677,11 +677,12 @@
   }
   .author {
     padding: 17px 0 24px;
-    background-position: 0 20%;
+    background-position: 140% 10%;
     background-size: 423px 349px;
+    background-image: url(../images/bg-autor.png);
     text-align: center;
     &__inner {
-      gap: 45px;
+      gap: 30px;
     }
     &__btn {
       font-size: 9px;
@@ -860,6 +861,38 @@
       font-size: 8px;
       line-height: 10px;
     }
+    &__form-closet {
+      font-size: 14px;
+      line-height: 14px;
+      top: 14px;
+      right: 18px;
+      cursor: pointer;
+      transition: all 0.3s;
+
+      &:hover {
+        transform: scale(1.1);
+        transition: all 0.3s;
+      }
+    }
+  }
+}
+
+@media (max-width: 430px) {
+  .author {
+    padding: 24px 0 29px;
+    background-position: 184% 14%;
+    background-size: 390px 325px;
+  }
+}
+
+@media (max-width: 400px) {
+  .author {
+    background-position: 195% 20%;
+    background-size: 335px 277px;
+
+    &__inner{
+      gap: 20px;
+    }
   }
 }
 
@@ -925,7 +958,7 @@
 
   .author {
     padding: 24px 0 29px;
-    background-position: 245% 15%;
+    background-position: 195% 13%;
     background-size: 335px 277px;
     &__inner {
       gap: 10px;
@@ -943,6 +976,7 @@
       max-width: 450px;
       display: flex;
       flex-direction: column;
+      gap: 5px;
       span {
         font-size: 14px;
         text-align: center;
